# dataVisualization

./: .gitignore  README.md
Project1/: analysis.ipynb  analysis.py  categorical_analysis.py  categorical_data.py  centralityByPart.txt  data.py  dataTypes.py  dataTypesTrim.py  exploratory_data_analysis.ipynb  main.py  test01_read_numeric_data.py  test02_read_data_errors.py  test03_read_cat_data.py  test04_read_missing_data.py  test05__str__.py  test06_get.py
Project2/: analysis.ipynb  analysis.py  blendExtract.py  categorical_data.py  charts.py  collator.py  exploratory_data_analysis.ipynb  outputr.txt  test01_read_numeric_data.py  test02_read_data_errors.py  test03_read_cat_data.py  test06_get.py  test_charts.py
Project3/: analysis.py  analyzeShaniquaData.ipynb  categorical_analysis.py  collator.py  linear_regression.ipynb  linear_regression.py  polynomial_regression.ipynb  regressTypes.py
Project4/: analysis.py  dataClass.py  data_transformations.ipynb  data_transformations.py  eigenfaces.ipynb  linear_regression.py  pca.ipynb  pca.py  pca_analysis.ipynb
Project5/: analysis.py  dataClass.py  dataTypes.py  dataTypesTrim.py  image_segmentation.ipynb  kmeans.ipynb  kmeans.py  linear_regression.py  pca.py  regressTypes.py
Project6/: analysis.py  classifier.py  email_preprocessor.py  kmeans.py  knn.ipynb  knn.py  naive_bayes.ipynb  (+3 more)
Project7/numpyProj/: CMakeLists.txt  pyproject.toml  setup.py
Project7/numpyProj/numpyProj/: __init__.py  numpyProj.cp312-win_amd64.pyd  numpyProj.cpp
Project7/numpyProj/numpyProj.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+63 files in other folders)
